--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"bits-ui": "^0.19.5",
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.353.0",
+		"svelte-radix": "^1.0.3",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0"
 	}
